# rust_gl_forge

./: .gitignore  Cargo.toml  README.md  font_atlas.xml  index.html  script.js  styles.css
assets/shaders/: simpleFragmentShader.glsl
docs/: hash.txt  index.html
research/glfw_text_rendering/: Cargo.toml
research/multitexturing/: Cargo.toml
research/multitexturing/src/: main.rs
shared_lib/: Cargo.toml  rustfmt.toml
shared_lib/resources/shaders/: font_renderer.vert
shared_lib/src/: camera.rs  color.rs  component.rs  conversion_utils.rs  core.rs  geometry.rs  geometry_manager.rs  gl_blend_guard.rs  gl_buffer.rs  gl_draw.rs  gl_font.rs  gl_shader.rs  gl_shader_manager.rs  gl_texture.rs  gl_traits.rs  gl_types.rs  gl_utils.rs  gl_vertex.rs  gl_vertex_array.rs  gl_vertex_attribute.rs  lib.rs  math.rs  mesh.rs  meshes.rs  opengl.rs  operation_status.rs  projection.rs  rectangle.rs  sdl_window.rs  shapes.rs  string_utils.rs  sys_event.rs  text.rs  traits.rs  vertex.rs  vertices.rs
shared_lib/src/apps/: application.rs  demo_application.rs  mod.rs
shared_lib/src/camera/: moveable_camera.rs  orthographic_camera.rs  perspective_camera.rs  view.rs
shared_lib/src/core/: crc_utils.rs  file_utils.rs
shared_lib/src/geometry/: buffer_geometry.rs
shared_lib/src/input/: mod.rs  mouse_adapter.rs
shared_lib/src/math/: angle.rs
shared_lib/src/mesh/: static_mesh.rs
shared_lib/src/meshes/: basic_mesh.rs  mod.rs
shared_lib/src/opengl/: blend_guard.rs  buffer_object.rs  font.rs  font_texture_atlas.rs  shader.rs  shader_manager.rs  shader_program.rs  shader_uniform_matrix.rs  shader_uniform_value.rs  texture.rs  texture_builder.rs  texture_manager.rs  vertex_array_object.rs  vertex_attribute.rs  vertex_layout.rs  vertex_layout_manager.rs
shared_lib/src/serialization/: mod.rs  vertex_attribute.rs
shared_lib/src/shapes/: rectangle.rs
shared_lib/src/text/: font_atlas.rs  simple_text_renderer.rs
shared_lib/src/vertex/: simple_vertex.rs  textured_vertex.rs
shared_lib/src/vertices/: TexturedVertex2D.rs  TexturedVertex3D.rs  mod.rs  textured_vertex.rs
src/: color.rs  gl_buffer.rs  gl_shader.rs  gl_texture.rs  gl_types.rs  gl_utils.rs  gl_vertex.rs  gl_vertex_attribute.rs  main.rs  render_context.rs  renderable.rs  renderables.rs  scene.rs  scene_utils.rs  scenes.rs  sdl_window.rs  string_utils.rs  texture_utils.rs  traits.rs  vertex_data.rs  vertex_data_2d.rs  vertex_data_3d.rs
(+62 files in other folders)
