[package]
name = "rust_sdl_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
anyhow = "1.0.79"
cgmath = "0.18.0"
memoffset = "0.9.0"

[dependencies.sdl2]
version = "0.36.0"
features = ["bundled", "static-link"]
