[package]
name = "rust_sdl_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
anyhow = "1.0.79"
thiserror = "1.0.59"
cgmath = "0.18.0"
memoffset = "0.9.0"
image = { version = "0.24.8", features = ["default"] }
rusttype = "0.9.3"
shared_lib = { path = "shared_lib" }
rand = "0.8.5"
chrono = "0.4.38"
nameof = "1.2.2"

[dependencies.sdl2]
version = "0.36.0"
features = ["bundled", "static-link"]

[workspace]
members = [
    ".",
    "shared_lib",
    "research/multitexturing",
]
