[package]
name = "shared_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
thiserror = "1.0.58"
cgmath = "0.18.0"
gl = "0.14.0"
image = { version = "0.24.8", features = ["default"] }
bitflags = "2.4.2"
rusttype = "0.9.3"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
once_cell = "1.19.0"

[dependencies.sdl2]
version = "0.36.0"
features = ["bundled", "static-link"]
